--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,12 +102,13 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <br>
 
         <h2 style="margin-top: 40px;">Education</h2>
         <br>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px; text-align: center;">
               <img src="images/yonsei.png" alt="Yonsei University Logo" style="width:auto; height:auto; max-width:80px;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
@@ -117,7 +118,7 @@
             </td>
           </tr>
           <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px; text-align: center;">
               <img src="images/ucsd.png" alt="UCSD Logo" style="width:auto; height:auto; max-width:80px;" />
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
