--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 I am an undergraduate student at Yonsei University, majoring in Electrical and Electronics Engineering.
               </p>
               <p>
-                During my undergraduate studies, I had the privilege of working as a research intern at the University of California, San Diego, under <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>, and at Seoul National University, under <a href="https://3d.snu.ac.kr/">Young-Min Kim</a>.
+                I am currently a research intern at NAVER AI Lab. During my undergraduate studies, I worked as a research intern at UC San Diego and Seoul National University.
               </p>
               <p>
                 My research interests lie in 3D Computer Vision and Computer Graphics.
@@ -73,11 +73,11 @@
               <br>
               <em>{{post.venue}}</em>
               <br>
-              {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
-              {% endif %}
               {% if post.website %}
               <a href="{{post.website}}">project page</a> /
+              {% endif %}
+              {% if post.paper %}
+              <a href="{{post.paper}}">paper</a> /
               {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
@@ -102,6 +102,35 @@
           {% endfor %}
           {% endfor %}
         </table>
+        <br>
+
+        <h2 style="margin-top: 40px;">Experiences</h2>
+        <br>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:75%;vertical-align:middle">
+              <h3 style="margin:0;">Research Intern</h3>
+              <div><a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml/generation-research">Generation Research</a>, <a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml">NAVER AI Lab</a> (Advisor: <a href="https://wityworks.com/">Jin-Hwa Kim</a>)</div>
+            </td>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2025.03 – Present</td>
+          </tr>
+          <tr>
+            <td style="padding:2.5%;width:75%;vertical-align:middle">
+              <h3 style="margin:0;">Research Intern</h3>
+              <div>Seoul National University (Advisor: <a href="https://3d.snu.ac.kr/">Young-Min Kim</a>)</div>
+            </td>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2024.04 – 2024.10</td>
+          </tr>
+          <tr>
+            <td style="padding:2.5%;width:75%;vertical-align:middle">
+              <h3 style="margin:0;">Research Intern</h3>
+              <div>University of California, San Diego (Advisor: <a href="https://cseweb.ucsd.edu/~haosu/">Hao Su</a>)</div>
+            </td>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2023.07 – 2024.05</td>
+          </tr>
+        </table>
+
+        <br>
         <br>
 
         <h2 style="margin-top: 40px;">Education</h2>
