--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,9 @@
               <p>
                 My research interests lie in 3D Computer Vision and Computer Graphics.
               </p>
-              <br>
               <p><b>
-                I am looking for PhD positions beginning in Fall 2026 and for research collaboration opportunities starting in 2026. Please feel free to contact me.
-              </b></p>
+                I am looking for PhD positions beginning in Fall 2026 and for research collaboration opportunities starting in 2026.
+              </b><br>Feel free to contact me!</p>
               <p style="text-align:center">
                 <a href="mailto:rendell@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/seonghunn">GitHub</a> &nbsp;/&nbsp;
