--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                 My research interests lie in 3D Computer Vision and Computer Graphics.
               </p>
               <p><b>
-                I am looking for PhD positions beginning in Fall 2026 and for research collaboration opportunities starting in 2026.
+                I am looking for PhD positions starting in Fall 2026, as well as research internship opportunities beginning in 2026.
               </b><br>Feel free to contact me!</p>
               <p style="text-align:center">
                 <a href="mailto:rendell@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
