--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
-              <h3 style="margin:0;">Research Intern</h3>
+              <h3 style="margin:0;">Research Scientist Intern</h3>
               <div><a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml/generation-research">Generation Research</a>, <a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml">NAVER AI Lab</a> (Advisor: <a href="https://wityworks.com/">Jin-Hwa Kim</a>)</div>
             </td>
             <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2025.03 – Present</td>
