--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,9 +177,9 @@
           <tr>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
               <h3 style="margin:0;">Research Scientist Intern</h3>
-              <div><a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml/generation-research">Generation Research</a>, <a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml">NAVER AI Lab</a> (Advisor: <a href="https://wityworks.com/">Jin-Hwa Kim</a>)</div>
+              <div><a class="subtle-link" href="https://naver-career.gitbook.io/en/positions/ai-ml/generation-research">Generation Research</a>, <a class="subtle-link" href="https://naver-career.gitbook.io/en/teams/clova-cic/ai-lab">NAVER AI Lab</a> (Advisor: <a href="https://wityworks.com/">Jin-Hwa Kim</a>)</div>
             </td>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2025.03 – Present</td>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;text-align:right;white-space:nowrap;">2025.03 – 2025.09</td>
           </tr>
           <tr>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
